--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,3 +155,31 @@ sub { bottom: -.25em; }
   font-style: normal;
   font-weight: bold;
 }
+
+table{
+  border-collapse: collapse;
+}
+
+td,th{
+  width: 100px;
+  height: 30px;
+  border: 1px solid black;
+  text-align: center;
+  line-height: 30px;
+}
+label{
+  display: inline-block;
+  width: 200px;
+  text-align: left;
+  margin-left: 10px;
+}
+
+div{
+  margin: 10px;
+  
+}
+form{
+  width: 500px;
+  border: 1px solid black;
+  margin: 10px;
+}
